--- a/Curso Python/PythonFundamentos/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Loops-Condiconais.ipynb
+++ b/Curso Python/PythonFundamentos/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Loops-Condiconais.ipynb
@@ -34,7 +34,14 @@
    "outputs": [],
    "source": [
     "# Exercício 1 - Crie uma estrutura que pergunte ao usuário qual o dia da semana. Se o dia for igual a Domingo ou \n",
-    "# igual a sábado, imprima na tela \"Hoje é dia de descanso\", caso contrário imprima na tela \"Você precisa trabalhar!\""
+    "# igual a sábado, imprima na tela \"Hoje é dia de descanso\", caso contrário imprima na tela \"Você precisa trabalhar!\"\n",
+    "dia = input(\"Hoje é qual dia da semana\")\n",
+    "dia.upper()\n",
+    "\n",
+    "if dia == \"DOMINGO\" or dia == \"SABADO\":\n",
+    "    print(\"Hoje é dia de descanso\")\n",
+    "else:\n",
+    "    print(\"Você precisa trabalhar!\")"
    ]
   },
   {
@@ -43,7 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercício 2 - Crie uma lista de 5 frutas e verifique se a fruta 'Morango' faz parte da lista"
+    "# Exercício 2 - Crie uma lista de 5 frutas e verifique se a fruta 'Morango' faz parte da lista\n",
+    "frutas = [\"Banana\", \"Laranja\", \"Morango\", \"Limão\", \"Uva\"]\n",
+    "\n",
+    "for fruta in frutas:\n",
+    "    if fruta == \"Morango\":\n",
+    "        print(\"Está na lista\")"
    ]
   },
   {
@@ -53,7 +65,14 @@
    "outputs": [],
    "source": [
     "# Exercício 3 - Crie uma tupla de 4 elementos, multiplique cada elemento da tupla por 2 e guarde os resultados em uma \n",
-    "# lista"
+    "# lista\n",
+    "tupla = (1, 2, 3, 4)\n",
+    "lista = []\n",
+    "\n",
+    "for i in tupla:\n",
+    "    lista.append(i*2)\n",
+    "\n",
+    "print(lista)"
    ]
   },
   {
@@ -62,27 +81,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercício 4 - Crie uma sequência de números pares entre 100 e 150 e imprima na tela"
+    "# Exercício 4 - Crie uma sequência de números pares entre 100 e 150 e imprima na tela\n",
+    "for i in range(100, 151, 2):\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercício 5 - Crie uma variável chamada temperatura e atribua o valor 40. Enquanto temperatura for maior que 35, \n",
-    "# imprima as temperaturas na tela"
+    "# imprima as temperaturas na tela\n",
+    "temperatura = 40\n",
+    "while temperatura > 35:\n",
+    "    print(temperatura)\n",
+    "    temperatura -= 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Exercício 6 - Crie uma variável chamada contador = 0. Enquanto counter for menor que 100, imprima os valores na tela,\n",
-    "# mas quando for encontrado o valor 23, interrompa a execução do programa"
+    "# mas quando for encontrado o valor 23, interrompa a execução do programa\n",
+    "counter = 0\n",
+    "\n",
+    "while counter < 100:\n",
+    "    if counter == 23:\n",
+    "        break\n",
+    "    else:\n",
+    "        print(counter)\n",
+    "        counter += 1"
    ]
   },
   {
@@ -92,7 +129,16 @@
    "outputs": [],
    "source": [
     "# Exercício 7 - Crie uma lista vazia e uma variável com valor 4. Enquanto o valor da variável for menor ou igual a 20, \n",
-    "# adicione à lista, apenas os valores pares e imprima a lista"
+    "# adicione à lista, apenas os valores pares e imprima a lista\n",
+    "lista = []\n",
+    "valor = 4\n",
+    "\n",
+    "while valor <= 20:\n",
+    "    if valor % 2 == 0:\n",
+    "        lista.append(valor)\n",
+    "    valor += 1\n",
+    "\n",
+    "print(lista)"
    ]
   },
   {
@@ -102,7 +148,8 @@
    "outputs": [],
    "source": [
     "# Exercício 8 - Transforme o resultado desta função range em uma lista: range(5, 45, 2)\n",
-    "nums = range(5, 45, 2)"
+    "nums = range(5, 45, 2)\n",
+    "print(list(nums))"
    ]
   },
   {
@@ -113,9 +160,9 @@
    "source": [
     "# Exercício 9 - Faça a correção dos erros no código abaixo e execute o programa. Dica: são 3 erros.\n",
     "temperatura = float(input('Qual a temperatura? '))\n",
-    "if temperatura > 30\n",
-    "print('Vista roupas leves.')\n",
-    "else\n",
+    "if temperatura > 30:\n",
+    "    print('Vista roupas leves.')\n",
+    "else:\n",
     "    print('Busque seus casacos.')"
    ]
   },
@@ -131,7 +178,15 @@
     "# “É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a \n",
     "# vantagem de existir.” (Machado de Assis)\n",
     "\n",
-    "frase = \"É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a vantagem de existir.\" "
+    "frase = \"É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a vantagem de existir.\" \n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "for letra in frase:\n",
+    "    if letra == 'r':\n",
+    "        count += 1\n",
+    "\n",
+    "print(\"A letra 'r' apareceu %s vezes\" %(count))"
    ]
   },
   {
@@ -165,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
