--- a/Curso Python/PythonFundamentos/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Funcoes.ipynb
+++ b/Curso Python/PythonFundamentos/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Funcoes.ipynb
@@ -34,7 +34,12 @@
    "outputs": [],
    "source": [
     "# Exercício 1 - Crie uma função que imprima a sequência de números pares entre 1 e 20 (a função não recebe parâmetro) e \n",
-    "# depois faça uma chamada à função para listar os números      "
+    "# depois faça uma chamada à função para listar os números\n",
+    "def imprimePares():\n",
+    "    for i in range(2, 21, 2):\n",
+    "        print(i)\n",
+    "\n",
+    "imprimePares()"
    ]
   },
   {
@@ -44,7 +49,13 @@
    "outputs": [],
    "source": [
     "# Exercício 2 - Crie uam função que receba uma string como argumento e retorne a mesma string em letras maiúsculas.\n",
-    "# Faça uma chamada à função, passando como parâmetro uma string"
+    "# Faça uma chamada à função, passando como parâmetro uma string\n",
+    "string = \"Meu nome é Álvaro\"\n",
+    "\n",
+    "def maiuscula(s1):\n",
+    "    print(s1.upper())\n",
+    "\n",
+    "maiuscula(string)"
    ]
   },
   {
@@ -54,7 +65,14 @@
    "outputs": [],
    "source": [
     "# Exercício 3 - Crie uma função que receba como parâmetro uma lista de 4 elementos, adicione 2 elementos a lista e \n",
-    "# imprima a lista"
+    "# imprima a lista\n",
+    "def adicionaNaLista(listaNum):\n",
+    "    listaNum.append(0)\n",
+    "    listaNum.append(5)\n",
+    "\n",
+    "l1 = [4, 9, 7]\n",
+    "adicionaNaLista(l1)\n",
+    "print(l1)"
    ]
   },
   {
@@ -64,7 +82,15 @@
    "outputs": [],
    "source": [
     "# Exercício 4 - Crie uma função que receba um argumento formal e uma possível lista de elementos. Faça duas chamadas \n",
-    "# à função, com apenas 1 elemento e na segunda chamada com 4 elementos"
+    "# à função, com apenas 1 elemento e na segunda chamada com 4 elementos\n",
+    "def imprima(arg, *lista): # o asterisco torna o argumento opcional\n",
+    "    print(arg)\n",
+    "    for i in lista:\n",
+    "        print(i)\n",
+    "\n",
+    "imprima(\"Oi galera\")\n",
+    "listaNum = [1, 2, 3]\n",
+    "imprima(55, listaNum)"
    ]
   },
   {
@@ -74,7 +100,13 @@
    "outputs": [],
    "source": [
     "# Exercício 5 - Crie uma função anônima e atribua seu retorno a uma variável chamada soma. A expressão vai receber 2 \n",
-    "# números como parâmetro e retornar a soma deles"
+    "# números como parâmetro e retornar a soma deles\n",
+    "num1 = 5\n",
+    "num2 = 4\n",
+    "\n",
+    "soma = lambda n1, n2: n1+n2\n",
+    "\n",
+    "print(soma(num1, num2))"
    ]
   },
   {
@@ -84,6 +116,7 @@
    "outputs": [],
    "source": [
     "# Exercício 6 - Execute o código abaixo e certifique-se que compreende a diferença entre variável global e local\n",
+    "\n",
     "total = 0\n",
     "def soma( arg1, arg2 ):\n",
     "    total = arg1 + arg2; \n",
@@ -107,7 +140,7 @@
     "# (que será estudada no próximo capítulo). Isso permite aplicar sua função a cada elemento da lista\n",
     "# Como descobrir a fórmula matemática que converte de Celsius para Fahrenheit? Pesquise!!!\n",
     "Celsius = [39.2, 36.5, 37.3, 37.8]\n",
-    "Fahrenheit = map(coloque_aqui_sua_função_lambda)\n",
+    "Fahrenheit = map(lambda tempC: (float(9)/5)*tempC + 32, Celsius)\n",
     "print (list(Fahrenheit))"
    ]
   },
@@ -118,7 +151,9 @@
    "outputs": [],
    "source": [
     "# Exercício 8\n",
-    "# Crie um dicionário e liste todos os métodos e atributos do dicionário"
+    "# Crie um dicionário e liste todos os métodos e atributos do dicionário\n",
+    "dicio = {1:'Ana', 2:'Álvaro', 3:'Alan'}\n",
+    "dir(dicio)"
    ]
   },
   {
@@ -147,7 +182,13 @@
     "# Arquivo: \"binary.csv\"\n",
     "import pandas as pd\n",
     "file_name = \"binary.csv\"\n",
-    " "
+    "\n",
+    "def descreverArquivo(file):\n",
+    "    arq = pd.read_csv(file)\n",
+    "    out = arq.describe()\n",
+    "    return out\n",
+    "\n",
+    "descreverArquivo(file_name)"
    ]
   },
   {
@@ -181,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1-final"
   }
  },
  "nbformat": 4,
