--- a/Linguagem Python/PythonFundamentos/Cap04/Notebooks/DSA-Python-Cap04-ExercicioS.ipynb
+++ b/Linguagem Python/PythonFundamentos/Cap04/Notebooks/DSA-Python-Cap04-ExercicioS.ipynb
@@ -33,7 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercício 1 - Crie uma lista de 3 elementos e calcule a terceira potência de cada elemento."
+    "# Exercício 1 - Crie uma lista de 3 elementos e calcule a terceira potência de cada elemento.\n",
+    "lista = [1, 2, 3]\n",
+    "\n",
+    "listaAoCubo = list(map(lambda num: num**3, lista))\n",
+    "\n",
+    "print(listaAoCubo)"
    ]
   },
   {
@@ -55,10 +60,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frase = palavras\n",
+    "palavrasDaFrase = map(lambda w: [w.upper(), w.lower(), len(w)], frase)\n",
+    "for i in palavrasDaFrase:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Exercício 3 - Calcule a matriz transposta da matriz abaixo.\n",
     "# Caso não saiba o que é matriz transposta, visite este link: https://pt.wikipedia.org/wiki/Matriz_transposta\n",
     "# Matriz transposta é um conceito fundamental na construção de redes neurais artificiais, base de sistemas de IA.\n",
-    "matrix = [[1, 2],[3,4],[5,6],[7,8]]"
+    "matrix = [[1, 2],[3, 4],[5, 6],[7, 8]]\n",
+    "transpose = [[row[i] for row in matrix] for i in range(2)]\n",
+    "print(transpose)"
    ]
   },
   {
@@ -70,7 +89,19 @@
     "# Exercício 4 - Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo. \n",
     "# Aplique as duas funções aos elementos da lista abaixo. \n",
     "# Obs: as duas funções devem ser aplicadas simultaneamente.\n",
-    "lista = [0, 1, 2, 3, 4]"
+    "lista = [0, 1, 2, 3, 4]\n",
+    "\n",
+    "def quadrado(x):\n",
+    "        return (x**2)\n",
+    "    \n",
+    "def cubo(x):\n",
+    "        return (x**3)\n",
+    "\n",
+    "funcoes = [quadrado, cubo]\n",
+    "\n",
+    "for i in lista:\n",
+    "    valor = map(lambda x: x(i), funcoes) # aplica valores da lista nas funções\n",
+    "    print(list((valor)))"
    ]
   },
   {
@@ -82,7 +113,10 @@
     "# Exercício 5 - Abaixo você encontra duas listas. Faça com que cada elemento da listaA seja elevado \n",
     "# ao elemento correspondente na listaB.\n",
     "listaA = [2, 3, 4]\n",
-    "listaB = [10, 11, 12]"
+    "listaB = [10, 11, 12]\n",
+    "\n",
+    "listaRes = list(map(pow, listaA, listaB))\n",
+    "print(listaRes)"
    ]
   },
   {
@@ -92,7 +126,16 @@
    "outputs": [],
    "source": [
     "# Exercício 6 - Considerando o range de valores abaixo, use a função filter() para retornar apenas os valores negativos.\n",
-    "range(-5, 5)"
+    "listR = range(-5, 5)\n",
+    "\n",
+    "def EhNegativo(num):\n",
+    "    if num < 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "negativos = filter(EhNegativo, listR)\n",
+    "print(list(negativos))"
    ]
   },
   {
@@ -103,7 +146,9 @@
    "source": [
     "# Exercício 7 - Usando a função filter(), encontre os valores que são comuns às duas listas abaixo.\n",
     "a = [1,2,3,5,7,9]\n",
-    "b = [2,3,5,6,7,8]"
+    "b = [2,3,5,6,7,8]\n",
+    "\n",
+    "print (list(filter(lambda x: x in a, b)))"
    ]
   },
   {
@@ -124,10 +169,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
+    "#data_corrente = time.localtime()\n",
+    "#data = time.strftime(\"%d/%m/%Y\", data_corrente)\n",
+    "#horario = time.strftime(\"%H:%M:%S\", data_corrente)\n",
+    "\n",
+    "print(time.strftime(\"%d/%m/%Y %H:%M\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Exercício 9 - Considere os dois dicionários abaixo. \n",
     "# Crie um terceiro dicionário com as chaves do dicionário 1 e os valores do dicionário 2.\n",
     "dict1 = {'a':1,'b':2}\n",
-    "dict2 = {'c':4,'d':5}"
+    "dict2 = {'c':4,'d':5}\n",
+    "\n",
+    "dict3 = zip(dict1, dict2.values())\n",
+    "print(dict(dict3))"
    ]
   },
   {
@@ -137,7 +200,15 @@
    "outputs": [],
    "source": [
     "# Exercício 10 - Considere a lista abaixo e retorne apenas os elementos cujo índice for maior que 5.\n",
-    "lista = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
+    "lista = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']\n",
+    "\n",
+    "#print(lista[6:])\n",
+    "\n",
+    "for indice, valor in enumerate(lista):\n",
+    "    if indice <= 5:\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(valor)"
    ]
   },
   {
@@ -171,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1-final"
   }
  },
  "nbformat": 4,
