--- a/Linguagem Python/PythonFundamentos/Cap05/Notebooks/DSA-Python-Cap05-Exercicios.ipynb
+++ b/Linguagem Python/PythonFundamentos/Cap05/Notebooks/DSA-Python-Cap05-Exercicios.ipynb
@@ -49,7 +49,11 @@
     "        \n",
     "    def print_rocket(self):\n",
     "        print(self.x, self.y)\n",
-    "        "
+    "\n",
+    "roc1 = Rocket(y=235, x=150)\n",
+    "roc1.print_rocket()\n",
+    "roc1.move_rocket(400,100)\n",
+    "roc1.print_rocket()      "
    ]
   },
   {
@@ -60,7 +64,21 @@
    "source": [
     "# Exercício 2 - Crie uma classe chamada Pessoa() com os atributos: nome, cidade, telefone e e-mail. Use pelo menos 2\n",
     "# métodos especiais na sua classe. Crie um objeto da sua classe e faça uma chamada a pelo menos um dos seus métodos\n",
-    "# especiais.\n"
+    "# especiais.\n",
+    "\n",
+    "class Pessoa():\n",
+    "\n",
+    "    def __init__(self, nome=\"\", cidade=\"\", telefone=0, e_mail=\"\"):\n",
+    "        self.nome = nome\n",
+    "        self.cidade = cidade\n",
+    "        self.telefone = telefone\n",
+    "        self.e_mail = e_mail\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"Numero de caracteres no nome: {}\".format(len(self.nome))\n",
+    "\n",
+    "jose = Pessoa(nome = \"Jose Aguiar dos Santos\", cidade = \"Vitoria, ES\", telefone = 27990124782, e_mail = \"aguiar.jose2020@gmail.com\")\n",
+    "str(jose)"
    ]
   },
   {
@@ -70,7 +88,23 @@
    "outputs": [],
    "source": [
     "# Exercício 3 - Crie a classe Smartphone com 2 atributos, tamanho e interface e crie a classe MP3Player com os \n",
-    "# atributos capacidade. A classe MP3player deve herdar os atributos da classe Smartphone.\n"
+    "# atributos capacidade. A classe MP3player deve herdar os atributos da classe Smartphone.\n",
+    "\n",
+    "class Smartphone():\n",
+    "    def __init__(self, tamanho, interface):\n",
+    "        self.tamanho = tamanho\n",
+    "        self.interface = interface\n",
+    "\n",
+    "class MP3Player(Smartphone):\n",
+    "    def __init__(self, tamanho, interface, capacidade):\n",
+    "        Smartphone.__init__(self, tamanho, interface)\n",
+    "        self.capacidade = capacidade\n",
+    "\n",
+    "    def info(self):\n",
+    "        print(\"%s'' \\n%s \\n%sGB \\n\" %(self.tamanho, self.interface, self.capacidade))\n",
+    "\n",
+    "mp3Alv = MP3Player(5.4, \"Android\", 32)\n",
+    "mp3Alv.info()"
    ]
   },
   {
@@ -104,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1-final"
   }
  },
  "nbformat": 4,
