Principais Estruturas de Dados e SQLite

--- a/Jupyter Notebook & Google Colaboratory/first_test.ipynb
+++ b/Jupyter Notebook & Google Colaboratory/first_test.ipynb
@@ -61,7 +61,7 @@
         "id": "Y61TQ9zDFAgz"
       },
       "source": [
-        "<bottom type=\"buttom\">Clique aqui</input>"
+        "<a src=\"google.com\">Clique aqui</a>"
       ]
     }
   ]
