resolucao das atividades no google colab

--- a/Jupyter Notebook & Google Colaboratory/Transformacoes.ipynb
+++ b/Jupyter Notebook & Google Colaboratory/Transformacoes.ipynb
@@ -480,42 +480,48 @@
       "source": [
         "from math import pi,cos,sin\n",
         "\n",
-        "# Function for building the Rotation Matrix around the Z-axes\n",
+        "# Function for building the Rotation Matrix around the axes\n",
+        "\n",
+        "def x_rotation(angle):\n",
+        "    rotation_matrix=np.array([[1,0,0,0],[0, cos(angle),-sin(angle),0],[0, sin(angle),cos(angle),0],[0,0,0,1]])\n",
+        "    return rotation_matrix\n",
+        "\n",
+        "def y_rotation(angle):\n",
+        "    rotation_matrix=np.array([[cos(angle),0,sin(angle),0],[0,1,0,0],[-sin(angle),0,cos(angle),0],[0,0,0,1]])\n",
+        "    return rotation_matrix\n",
+        "\n",
         "def z_rotation(angle):\n",
         "    rotation_matrix=np.array([[cos(angle),-sin(angle),0,0],[sin(angle),cos(angle),0,0],[0,0,1,0],[0,0,0,1]])\n",
         "    return rotation_matrix\n",
-        "################################\n",
-        "# Create here the functions for Rotation around the X and Y axis, and for translation\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
+        "def translade(dx, dy, dz):\n",
+        "    translation = np.array([dx,dy,dz,1])\n",
+        "    T_matrix = np.eye(4)\n",
+        "    T_matrix[:,-1]=translation.T\n",
+        "    return T_matrix\n",
         "\n",
         "#################################\n",
         "    \n",
         "rotation_angle = pi/2 #in radians\n",
+        "Rx = x_rotation(rotation_angle)\n",
+        "print('Rx:\\n', Rx,'\\n')\n",
+        "Ry = y_rotation(rotation_angle)\n",
+        "print('Ry:\\n', Ry,'\\n')\n",
         "Rz = z_rotation(rotation_angle)\n",
-        "print('Rz:\\n',Rz,'\\n')\n",
-        "\n",
+        "print('Rz:\\n', Rz,'\\n')\n",
+        "T = translade(2,1,3)\n",
+        "print('T:\\n', T,'\\n')\n",
         "\n",
         "#original point \n",
         "axis = set_plots(lim=[-5,5])\n",
         "axis = draw_arrows(origin_point,base,axis)\n",
         "\n",
         "\n",
-        "########################\n",
-        "# After you create the function for translation, substitute this code with a function call\n",
-        "translation = np.array([3,3,3,1])\n",
-        "T = np.eye(4)\n",
-        "T[:,-1]=translation.T\n",
-        "#########################\n",
-        "\n",
-        "\n",
         "\n",
         "print('Translation matrix:')\n",
         "print(T,'\\n')\n",
         "\n",
-        "R = Rz\n",
+        "R = Ry\n",
         "\n",
         "rotated_point_mult = np.dot(R,origin_point)\n",
         "\n",
